frontend/test/should_pass/exact_003.grg
exact rule r {
	pattern {
		x: Node -:Edge-> x;
	}
	replace {
	}
}

